# transfer-anchor

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
programs/transfer/: Cargo.toml
programs/transfer-sol/: Cargo.toml
programs/transfer-sol/src/: lib.rs
programs/transfer/src/: lib.rs
tests/: transfer-sol.ts  transfer.ts
